tests/baselines/reference/library-reference-5.errors.txt
/node_modules/bar/index.d.ts(1,23): error TS4090: Conflicting definitions for 'alpha' found at '/node_modules/bar/node_modules/alpha/index.d.ts' and '/node_modules/foo/node_modules/alpha/index.d.ts'. Consider installing a specific version of this library to resolve the conflict.
  The file is in the program because:
    Type library referenced via 'alpha' from file '/node_modules/foo/index.d.ts'
    Type library referenced via 'alpha' from file '/node_modules/bar/index.d.ts'


==== /src/root.ts (0 errors) ====
    /// <reference types="foo" />
    /// <reference types="bar" />
    
==== /node_modules/foo/index.d.ts (0 errors) ====
    // Secondary references may not be duplicated if they disagree in content
    
    /// <reference types="alpha" />
    declare var foo: any;
    
==== /node_modules/foo/node_modules/alpha/index.d.ts (0 errors) ====
    declare var alpha: any;
    
==== /node_modules/bar/index.d.ts (1 errors) ====
    /// <reference types="alpha" />
                          ~~~~~
!!! error TS4090: Conflicting definitions for 'alpha' found at '/node_modules/bar/node_modules/alpha/index.d.ts' and '/node_modules/foo/node_modules/alpha/index.d.ts'. Consider installing a specific version of this library to resolve the conflict.
!!! error TS4090:   The file is in the program because:
!!! error TS4090:     Type library referenced via 'alpha' from file '/node_modules/foo/index.d.ts'
!!! error TS4090:     Type library referenced via 'alpha' from file '/node_modules/bar/index.d.ts'
!!! related TS1404 /node_modules/foo/index.d.ts:3:23: File is included via type library reference here.
    declare var bar: any;
    
==== /node_modules/bar/node_modules/alpha/index.d.ts (0 errors) ====
    declare var alpha: {};
    